--- a/LoanWebApplication/LoanWebApplication/src/index.html
+++ b/LoanWebApplication/LoanWebApplication/src/index.html
@@ -10,6 +10,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Fira+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./app/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./app/assets/css/bootstrap-datetimepicker.min.css">
     <link type="text/css" href="./app/assets/css/jquery.jscrollpane.css" rel="stylesheet" media="all" />
     <link href="./app/assets/css/baseLayout.css" rel='stylesheet' type='text/css'>
 
